--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ glow = "0.3.0-alpha2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 glutin = "0.22.0-alpha3"
-instant = "0.1.2"
+instant = { version = "0.1", features = ["now"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.50"
 web-sys = "0.3.28"
-instant = { version = "0.1", features = [ "wasm-bindgen" ] }
+instant = { version = "0.1", features = [ "wasm-bindgen", "now" ] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.winit]
 git = "https://github.com/rust-windowing/winit.git"
